--- a/教学文档/数学建模.md
+++ b/教学文档/数学建模.md
@@ -813,11 +813,11 @@ min f(x) = 13.8790
 
 
 
-## 2. 层次分析法
+## 2. 数据分析相关算法
 
 
 
-
+### 2.1. 层次分析法
 
 
 
@@ -861,4 +861,66 @@ else:
     standard_max_eigenvector = list(map(abs, max_eigenvector)) / sum(list(map(abs, max_eigenvector)))
     print(standard_max_eigenvector)
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 2.2. Topsis优劣解距离法
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+3.
 
